main page refac

--- a/Bookshelf/AppShell.xaml
+++ b/Bookshelf/AppShell.xaml
@@ -5,7 +5,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:Bookshelf.Views"
     Shell.FlyoutBehavior="Disabled"
-    BackgroundColor="#442E26"
+    BackgroundColor="#5D4037"
     >
 
     <ShellItem Route="SignIn" FlyoutItemIsVisible="False">
