--- a/Bookshelf/Views/Main.xaml
+++ b/Bookshelf/Views/Main.xaml
@@ -12,8 +12,8 @@
     <ContentPage.Resources>
         <!--carditens-->
         <Style x:Key="FrameCardItem" TargetType="Frame">
-            <Setter Property="BackgroundColor" Value="#607D8B"/>
-            <Setter Property="BorderColor" Value="#607D8B"/>
+            <Setter Property="BackgroundColor" Value="#4D7176"/>
+            <Setter Property="BorderColor" Value="#4D7176"/>
             <Setter Property="CornerRadius" Value="10"/>
         </Style>
         <Style x:Key="GridCardItem" TargetType="Frame">
@@ -22,12 +22,12 @@
         </Style>
         <Style x:Key="LblQuantity" TargetType="Label">
             <Setter Property="VerticalTextAlignment" Value="Center"></Setter>
-            <Setter Property="FontSize" Value="35"></Setter>
+            <Setter Property="FontSize" Value="50"></Setter>
             <Setter Property="VerticalOptions" Value="CenterAndExpand"></Setter>
-            <Setter Property="TextColor" Value="Black"></Setter>
+            <Setter Property="TextColor" Value="{StaticResource White}"></Setter>
             <Setter Property="HorizontalOptions" Value="StartAndExpand"></Setter>
             <Setter Property="FontFamily" Value="EBGaramondSemiBold"></Setter>
-            <Setter Property="Padding" Value="0,10,0,15"></Setter>
+            <Setter Property="Padding" Value="0,0,0,0"></Setter>
         </Style>
         <Style x:Key="LblCardImgIcon" TargetType="Label">
             <Setter Property="HorizontalOptions" Value="Start"></Setter>
@@ -35,21 +35,21 @@
             <Setter Property="FontSize" Value="30"></Setter>
             <Setter Property="Margin" Value="0,0,0,10"></Setter>
             <Setter Property="FontFamily" Value="FontAwesome"></Setter>
-            <Setter Property="TextColor" Value="#2b3133"></Setter>
+            <Setter Property="TextColor" Value="{StaticResource White}"></Setter>
         </Style>
         <Style x:Key="ImgAngleRight" TargetType="Label">
             <Setter Property="FontFamily" Value="FontAwesome"></Setter>
             <Setter Property="VerticalTextAlignment" Value="Center"></Setter>
-            <Setter Property="FontSize" Value="45"></Setter>
-            <Setter Property="TextColor" Value="#2b3133"></Setter>
+            <Setter Property="FontSize" Value="55"></Setter>
+            <Setter Property="TextColor" Value="{StaticResource White}"></Setter>
             <Setter Property="HorizontalOptions" Value="End"></Setter>
             <Setter Property="Text" Value="{x:Static Icons:IconFont.AngleRight}"></Setter>
         </Style>
         <Style x:Key="LblText" TargetType="Label">
-            <Setter Property="TextColor" Value="#2b3133"></Setter>
+            <Setter Property="TextColor" Value="{StaticResource White}"></Setter>
             <Setter Property="VerticalOptions" Value="End"></Setter>
             <Setter Property="VerticalTextAlignment" Value="End"></Setter>
-            <Setter Property="FontSize" Value="12"></Setter>
+            <Setter Property="FontSize" Value="14"></Setter>
             <Setter Property="FontFamily" Value="EBGaramondRegular"></Setter>
         </Style>
         <Style x:Key="BtnExit" TargetType="Button">
@@ -69,10 +69,9 @@
     <ContentPage.Content>
         <ScrollView>
             <StackLayout HorizontalOptions="FillAndExpand" Padding="1" VerticalOptions="FillAndExpand" >
-                <Frame Style="{ StaticResource MainFrame }" CornerRadius="10" Padding="5" Margin="5">
+                <Frame Style="{ StaticResource FramePrimary }" CornerRadius="10" Padding="5" Margin="5">
                     <VerticalStackLayout Spacing="2" >
-                        <!--<ActivityIndicator IsVisible="{Binding IsBusy}" IsRunning="{Binding IsBusy}" HorizontalOptions="FillAndExpand" VerticalOptions="CenterAndExpand" ></ActivityIndicator>-->
-                        <Frame Style="{ StaticResource FrameCardItem }"  >
+                        <Frame Style="{ StaticResource FrameCardItem }"  Margin="0,5,0,10">
                             <Frame.GestureRecognizers>
                                 <TapGestureRecognizer Command="{Binding IllReadCommand}" />
                             </Frame.GestureRecognizers>
@@ -84,12 +83,23 @@
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="75" />
                                     <ColumnDefinition Width="*" />
-                                    <ColumnDefinition Width="*" />
+                                    <ColumnDefinition Width="40" />
                                 </Grid.ColumnDefinitions>
-                                <Label Text="{x:Static Icons:IconFont.List}" Grid.Row="0" Grid.Column="0" Style="{ StaticResource LblCardImgIcon }"  SemanticProperties.Description="Vou ler" />
+                                <Label
+                                    Text="{x:Static Icons:IconFont.List}"
+                                    Grid.Row="0" Grid.Column="0"
+                                    Style="{ StaticResource LblCardImgIcon }"
+                                    SemanticProperties.Description="Vou ler" 
+                                    />
                                 <Label 
-                                    Text="{Binding IllRead}" Grid.Row="0" Grid.Column="1" Grid.RowSpan="2" Style="{ StaticResource LblQuantity }" />
-                                <Label Text="Vou ler" Grid.Row="1" Grid.Column="0" Style="{ StaticResource LblText }" />
+                                    Text="{Binding IllRead}" 
+                                    Grid.Row="0" Grid.Column="1" Grid.RowSpan="2"
+                                    Style="{ StaticResource LblQuantity }"
+                                    />
+                                <Label 
+                                    Text="Vou ler" 
+                                    Grid.Row="1" Grid.Column="0" 
+                                    Style="{ StaticResource LblText }" />
                                 <Label 
                                     Grid.Column="3"
                                     Grid.RowSpan="2"
@@ -98,7 +108,7 @@
                                     />
                             </Grid>
                         </Frame>
-                        <Frame Style="{ StaticResource FrameCardItem }" >
+                        <Frame Style="{ StaticResource FrameCardItem }"  Margin="0,0,0,10" >
                             <Frame.GestureRecognizers>
                                 <TapGestureRecognizer Command="{Binding ReadingCommand}" />
                             </Frame.GestureRecognizers>
@@ -112,9 +122,22 @@
                                     <ColumnDefinition Width ="*" />
                                     <ColumnDefinition Width="70" />
                                 </Grid.ColumnDefinitions>
-                                <Label Text="{x:Static Icons:IconFont.BookReader}" Grid.Row="0" Grid.Column="0" Style="{ StaticResource LblCardImgIcon }" SemanticProperties.Description="Lendo" />
-                                <Label Text="{Binding Reading}" Grid.Row="0" Grid.Column="1" Grid.RowSpan="2" Style="{ StaticResource LblQuantity }"/>
-                                <Label Text="Lendo" Grid.Row="1" Grid.Column="0" Style="{ StaticResource LblText }" />
+                                <Label 
+                                    Text="{x:Static Icons:IconFont.BookReader}"
+                                    Grid.Row="0" Grid.Column="0" 
+                                    Style="{ StaticResource LblCardImgIcon }"
+                                    SemanticProperties.Description="Lendo"
+                                    />
+                                <Label
+                                    Text="{Binding Reading}"
+                                    Grid.Row="0" Grid.Column="1" Grid.RowSpan="2"
+                                    Style="{ StaticResource LblQuantity }"
+                                    />
+                                <Label
+                                    Text="Lendo" 
+                                    Grid.Row="1" Grid.Column="0"
+                                    Style="{ StaticResource LblText }"
+                                    />
                                 <Label Grid.Column="3"
                                        Grid.RowSpan="2"
                                        Style="{ StaticResource ImgAngleRight }"
@@ -122,7 +145,7 @@
                                        />
                             </Grid>
                         </Frame>
-                        <Frame Style="{ StaticResource FrameCardItem }">
+                        <Frame Style="{ StaticResource FrameCardItem }"  Margin="0,0,0,10">
                             <Frame.GestureRecognizers>
                                 <TapGestureRecognizer Command="{Binding ReadCommand}"/>
                             </Frame.GestureRecognizers>
@@ -152,7 +175,7 @@
                                     />
                             </Grid>
                         </Frame>
-                        <Frame Style="{ StaticResource FrameCardItem }">
+                        <Frame Style="{ StaticResource FrameCardItem }"  Margin="0,0,0,10">
                             <Frame.GestureRecognizers>
                                 <TapGestureRecognizer Command="{Binding InterruptedCommand}" />
                             </Frame.GestureRecognizers>
@@ -186,7 +209,7 @@
                         </Frame>
                     </VerticalStackLayout>
                 </Frame>
-                <Frame BackgroundColor="#BDBDBD" Padding="5" VerticalOptions="FillAndExpand" Margin="5,0,5,5" CornerRadius="10">
+                <Frame BackgroundColor="Transparent" Padding="5" VerticalOptions="FillAndExpand" Margin="5,0,5,5" CornerRadius="10">
                     <StackLayout VerticalOptions="FillAndExpand">
                         <Grid HorizontalOptions="FillAndExpand" ColumnSpacing="5" Margin="0,10,0,0">
                             <Grid.RowDefinitions>
@@ -196,16 +219,20 @@
                                 <ColumnDefinition Width="*"/>
                                 <ColumnDefinition Width="*"/>
                             </Grid.ColumnDefinitions>
-                            <Button Text="Adicionar" HorizontalOptions="FillAndExpand" Style="{StaticResource MainBtn}" Command="{Binding GoogleSearchCommand}" FontSize="12" 
+                            <Button Text="Adicionar" HorizontalOptions="FillAndExpand" Style="{StaticResource BtnInfoSecondary}" 
+                                    Command="{Binding GoogleSearchCommand}" FontSize="12" 
                                     ContentLayout="Left, 10">
                                 <Button.ImageSource>
-                                    <FontImageSource  FontFamily="FontAwesome" Color="#EDEDED" Glyph="{x:Static Icons:IconFont.Book}" Size="15"></FontImageSource>
+                                    <FontImageSource  FontFamily="FontAwesome" Color="{StaticResource Black}" Glyph="{x:Static Icons:IconFont.Book}" Size="15"/>
                                 </Button.ImageSource>
                             </Button>
-                            <Button Text="Listar Todos" Grid.Row="0" Grid.Column="1" HorizontalOptions="FillAndExpand" Style="{StaticResource BtnSecondary}" FontSize="12"
-                                     BackgroundColor="#2D4144" ContentLayout="Left, 10" Command="{Binding ArchiveCommand}" >
+                            <Button Text="Listar Todos" Grid.Row="0" Grid.Column="1"
+                                    HorizontalOptions="FillAndExpand" 
+                                    Style="{StaticResource BtnInfoSecondary}" 
+                                    FontSize="15"
+                                    ContentLayout="Left, 10" Command="{Binding ArchiveCommand}" >
                                 <Button.ImageSource>
-                                    <FontImageSource  FontFamily="FontAwesome" Color="#EDEDED" Glyph="{x:Static Icons:IconFont.Bars}" Size="15" />
+                                    <FontImageSource  FontFamily="FontAwesome" Color="{StaticResource Black}" Glyph="{x:Static Icons:IconFont.Bars}" Size="15" />
                                 </Button.ImageSource>
                             </Button>
                         </Grid>
