melhorias no front da tela de form de livro

--- a/Bookshelf/Components/BorderedEntry.xaml
+++ b/Bookshelf/Components/BorderedEntry.xaml
@@ -13,6 +13,7 @@
             Style="{StaticResource Entry}" 
             Text="{Binding Source={x:Reference this},Path= Text}"
             IsPassword="{Binding Source={x:Reference this},Path= IsPassword}"
+            IsEnabled="{Binding Source={x:Reference this},Path= Enabled}"
             />
     </Border>
 </VerticalStackLayout>
