--- a/Bookshelf/Views/AddBook.xaml
+++ b/Bookshelf/Views/AddBook.xaml
@@ -5,13 +5,14 @@
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit" 
              xmlns:viewmodels="clr-namespace:Bookshelf.ViewModels" x:DataType="viewmodels:AddBookVM"
              xmlns:behaviors="clr-namespace:Bookshelf.Utils.Behaviors"
+             xmlns:components = "clr-namespace:Bookshelf.Components"
              Title="Cadastrar Livro"
              Style="{StaticResource ContentPage}" 
              >
     <ContentPage.Content>
         <ScrollView>
             <StackLayout VerticalOptions="Center" Style="{StaticResource MainStackLayout}" >
-                <Frame Style="{ StaticResource MainFrame }">
+                <Frame Style="{ StaticResource FramePrimary }">
                     <StackLayout>
                         <Image 
                             Source="{Binding Cover}"                                                              
@@ -20,37 +21,10 @@
                             HeightRequest="120"
                             IsVisible="{Binding ImgCoverIsVisible}"
                             />
-                        <Border HorizontalOptions="FillAndExpand">
-                            <Border.StrokeShape>
-                                <RoundRectangle CornerRadius="5" />
-                            </Border.StrokeShape>
-                            <Entry
-                            MinimumWidthRequest="250"
-                            Text="{Binding Title}"
-                            Style="{StaticResource Entry}"
-                            CompressedLayout.IsHeadless="False" 
-                            HorizontalOptions="FillAndExpand" 
-                            MaxLength="400" 
-                            IsEnabled="{Binding LblTitleIsEnabled}"
-                            />
-                        </Border>
-                        <Label 
-                            Text="*Subtítulo" 
-                            Style="{StaticResource LblEntry}"
-                            />
-                        <Border HorizontalOptions="FillAndExpand">
-                            <Border.StrokeShape>
-                                <RoundRectangle CornerRadius="5" />
-                            </Border.StrokeShape>
-                            <Entry 
-                                x:Name="EntSubTitle" 
-                                MinimumWidthRequest="250"
-                                Text="{Binding SubTitle}"
-                                Style="{StaticResource Entry}"
-                                HorizontalOptions="FillAndExpand"
-                                MaxLength="400" 
-                                />
-                        </Border>
+
+                        <components:BorderedEntry Text="{Binding Title}" LabelText="Título" Enabled="{Binding LblTitleIsEnabled}"/>
+                        <components:BorderedEntry Text="{Binding SubTitle}" LabelText="*Subtítulo"/>
+
                         <Grid HorizontalOptions="FillAndExpand">
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="*" />
@@ -77,7 +51,7 @@
                                     >
                                     <Label 
                                         Text="*Volume" 
-                                        Style="{StaticResource LblEntry}"
+                                        Style="{StaticResource LblHEntry}"
                                         />
                                     <Border WidthRequest="70"  
                                             HorizontalOptions="StartAndExpand"
@@ -104,8 +78,8 @@
                             </Frame>
                             <Frame VerticalOptions="Start" BorderColor="Transparent" Grid.Row="0" Grid.Column="1" Padding="0" BackgroundColor="Transparent" HorizontalOptions="Start">
                                 <StackLayout Orientation="Vertical" HorizontalOptions="FillAndExpand" VerticalOptions="StartAndExpand">
-                                    <Label Text="*Ano" Style="{StaticResource LblEntry}"></Label>
-                                    <Border  WidthRequest="90" Grid.Row="0" Grid.Column="1">
+                                    <Label Text="*Ano" Style="{StaticResource LblHEntry}"></Label>
+                                    <Border WidthRequest="90" Grid.Row="0" Grid.Column="1">
                                         <Border.StrokeShape>
                                             <RoundRectangle CornerRadius="5" />
                                         </Border.StrokeShape>
@@ -118,20 +92,11 @@
                                 </StackLayout>
                             </Frame>
                             <Frame VerticalOptions="Start" BorderColor="Transparent" HorizontalOptions="FillAndExpand" Grid.Row="1" Grid.ColumnSpan="2" Padding="0" BackgroundColor="Transparent">
-                                <StackLayout Orientation="Vertical" HorizontalOptions="FillAndExpand" VerticalOptions="Start">
-                                    <Label Text="Autor(es)" Style="{StaticResource LblEntry}"></Label>
-                                    <Border MinimumWidthRequest="250">
-                                        <Border.StrokeShape>
-                                            <RoundRectangle CornerRadius="5" />
-                                        </Border.StrokeShape>
-                                        <Entry MinimumWidthRequest="240" Text="{Binding Authors}" MaxLength="400" 
-                                           HorizontalOptions="FillAndExpand" Style="{StaticResource Entry}" />
-                                    </Border>
-                                </StackLayout>
+                                <components:BorderedEntry Text="{Binding Authors}" LabelText="Autor(es)"/>
                             </Frame>
                             <Frame VerticalOptions="Start" BorderColor="Transparent"  HorizontalOptions="FillAndExpand" Grid.Row="2" Grid.Column="0" Padding="0" BackgroundColor="Transparent">
                                 <StackLayout Orientation="Vertical" HorizontalOptions="FillAndExpand" VerticalOptions="Start">
-                                    <Label Text="Páginas" Style="{StaticResource LblEntry}"></Label>
+                                    <Label Text="Páginas" Style="{StaticResource LblHEntry}"></Label>
                                     <Border  WidthRequest="70" HorizontalOptions="Start">
                                         <Border.StrokeShape>
                                             <RoundRectangle CornerRadius="5" />
@@ -145,31 +110,15 @@
                                 </StackLayout>
                             </Frame>
                             <Frame VerticalOptions="Start" BorderColor="Transparent" HorizontalOptions="FillAndExpand" Grid.Row="2" Grid.Column="1" Padding="0" BackgroundColor="Transparent">
-                                <StackLayout Orientation="Vertical" HorizontalOptions="FillAndExpand" VerticalOptions="Start">
-                                    <Label Text="*Gênero" Style="{StaticResource LblEntry}"></Label>
-                                    <Border  HorizontalOptions="FillAndExpand" >
-                                        <Border.StrokeShape>
-                                            <RoundRectangle CornerRadius="5" />
-                                        </Border.StrokeShape>
-                                        <Entry Text="{Binding Genre}" HorizontalOptions="FillAndExpand" MaxLength="100" Style="{StaticResource Entry}"/>
-                                    </Border>
-                                </StackLayout>                                    
+                                <components:BorderedEntry Text="{Binding Genre}" LabelText="*Gênero"/>
                             </Frame>
                         </Grid>
                         <Frame VerticalOptions="Start" BorderColor="Transparent" HorizontalOptions="FillAndExpand" Grid.Row="0" Grid.Column="1" Padding="0" BackgroundColor="Transparent">
-                            <StackLayout Orientation="Vertical" HorizontalOptions="FillAndExpand" VerticalOptions="Start">
-                                <Label Text="*Isbn" Style="{StaticResource LblEntry}" />
-                                <Border  MaximumWidthRequest="350" MinimumWidthRequest="250" HorizontalOptions="StartAndExpand">
-                                    <Border.StrokeShape>
-                                        <RoundRectangle CornerRadius="5" />
-                                    </Border.StrokeShape>
-                                    <Entry MaximumWidthRequest="350" MinimumWidthRequest="250" Text="{Binding Isbn}" HorizontalOptions="StartAndExpand" MaxLength="300" Style="{StaticResource Entry}" />
-                                </Border>
-                            </StackLayout>
+                            <components:BorderedEntry Text="{Binding Isbn}" LabelText="*Isbn"/>
                         </Frame>
-                        <BoxView HeightRequest="1" BackgroundColor="Black" Color="Black" Margin="0,10,0,10"></BoxView>
-                        <Label Text="Situação" VerticalOptions="Fill" HorizontalOptions="Center" TextColor="Black" FontFamily="EBGaramondSemiBold" FontSize="20"/>
-                        <Border HorizontalOptions="CenterAndExpand">
+                        <BoxView HeightRequest="1" BackgroundColor="{StaticResource White}"  Margin="0,10,0,10"></BoxView>
+                        <Label Text="Situação" VerticalOptions="Fill" HorizontalOptions="Center" TextColor="{StaticResource White}" FontFamily="EBGaramondSemiBold" FontSize="20"/>
+                        <Border HorizontalOptions="CenterAndExpand" Margin="0,5,0,5" Stroke="White">
                             <Border.StrokeShape>
                                 <RoundRectangle CornerRadius="5" />
                             </Border.StrokeShape>
@@ -178,18 +127,22 @@
                                 SelectedIndex="{ Binding PkrStatusSelectedIndex }"                                    
                                 />
                         </Border>
-                        <Grid HorizontalOptions="CenterAndExpand" Margin="0,10,0,10" IsVisible="{Binding RatingBarIsVisible}">
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="*" />
-                            </Grid.RowDefinitions>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width ="*" />
-                                <ColumnDefinition Width ="*" />
-                                <ColumnDefinition Width ="*" />
-                                <ColumnDefinition Width ="*" />
-                                <ColumnDefinition Width ="*" />
-                            </Grid.ColumnDefinitions>
-                            <Image 
+                        <Border HorizontalOptions="CenterAndExpand" Margin="0,5,0,5" Stroke="Gray" BackgroundColor="White" Padding="10,0,10,0" IsVisible="{Binding RatingBarIsVisible}">
+                            <Border.StrokeShape>
+                                <RoundRectangle CornerRadius="5" />
+                            </Border.StrokeShape>
+                            <Grid HorizontalOptions="Center"  Margin="0,10,0,10">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="*" />
+                                </Grid.RowDefinitions>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width ="*" />
+                                    <ColumnDefinition Width ="*" />
+                                    <ColumnDefinition Width ="*" />
+                                    <ColumnDefinition Width ="*" />
+                                    <ColumnDefinition Width ="*" />
+                                </Grid.ColumnDefinitions>
+                                <Image 
                                 Source="{Binding ImgStar1}"  
                                 Grid.Row="0" 
                                 Grid.Column="0"
@@ -197,34 +150,35 @@
                                 HorizontalOptions="Center"
                                 Margin="0,0,3,0" 
                                 >
-                                <Image.GestureRecognizers>
-                                    <TapGestureRecognizer Command="{Binding ImgStar1ClickCommand}" NumberOfTapsRequired="1" />
-                                </Image.GestureRecognizers>
-                            </Image>
-                            <Image Source="{Binding ImgStar2}" Grid.Row="0" Grid.Column="1" HeightRequest="30" HorizontalOptions="Center" Margin="0,0,3,0" >
-                                <Image.GestureRecognizers>
-                                    <TapGestureRecognizer Command="{Binding ImgStar2ClickCommand}" NumberOfTapsRequired="1" />
-                                </Image.GestureRecognizers>
-                            </Image>
-                            <Image Source="{Binding ImgStar3}" Grid.Row="0" Grid.Column="2" HeightRequest="30" HorizontalOptions="Center" Margin="0,0,3,0" >
-                                <Image.GestureRecognizers>
-                                    <TapGestureRecognizer Command="{Binding ImgStar3ClickCommand}" NumberOfTapsRequired="1" />
-                                </Image.GestureRecognizers>
-                            </Image>
-                            <Image Source="{Binding ImgStar4}" Grid.Row="0" Grid.Column="3" HeightRequest="30" HorizontalOptions="Center" Margin="0,0,3,0" >
-                                <Image.GestureRecognizers>
-                                    <TapGestureRecognizer Command="{Binding ImgStar4ClickCommand}" NumberOfTapsRequired="1" />
-                                </Image.GestureRecognizers>
-                            </Image>
-                            <Image Source="{Binding ImgStar5}" Grid.Row="0" Grid.Column="4" HeightRequest="30" HorizontalOptions="Center" >
-                                <Image.GestureRecognizers>
-                                    <TapGestureRecognizer Command="{Binding ImgStar5ClickCommand}" NumberOfTapsRequired="1" />
-                                </Image.GestureRecognizers>
-                            </Image>
-                        </Grid>
+                                    <Image.GestureRecognizers>
+                                        <TapGestureRecognizer Command="{Binding ImgStar1ClickCommand}" NumberOfTapsRequired="1" />
+                                    </Image.GestureRecognizers>
+                                </Image>
+                                <Image Source="{Binding ImgStar2}" Grid.Row="0" Grid.Column="1" HeightRequest="30" HorizontalOptions="Center" Margin="0,0,3,0" >
+                                    <Image.GestureRecognizers>
+                                        <TapGestureRecognizer Command="{Binding ImgStar2ClickCommand}" NumberOfTapsRequired="1" />
+                                    </Image.GestureRecognizers>
+                                </Image>
+                                <Image Source="{Binding ImgStar3}" Grid.Row="0" Grid.Column="2" HeightRequest="30" HorizontalOptions="Center" Margin="0,0,3,0" >
+                                    <Image.GestureRecognizers>
+                                        <TapGestureRecognizer Command="{Binding ImgStar3ClickCommand}" NumberOfTapsRequired="1" />
+                                    </Image.GestureRecognizers>
+                                </Image>
+                                <Image Source="{Binding ImgStar4}" Grid.Row="0" Grid.Column="3" HeightRequest="30" HorizontalOptions="Center" Margin="0,0,3,0" >
+                                    <Image.GestureRecognizers>
+                                        <TapGestureRecognizer Command="{Binding ImgStar4ClickCommand}" NumberOfTapsRequired="1" />
+                                    </Image.GestureRecognizers>
+                                </Image>
+                                <Image Source="{Binding ImgStar5}" Grid.Row="0" Grid.Column="4" HeightRequest="30" HorizontalOptions="Center" >
+                                    <Image.GestureRecognizers>
+                                        <TapGestureRecognizer Command="{Binding ImgStar5ClickCommand}" NumberOfTapsRequired="1" />
+                                    </Image.GestureRecognizers>
+                                </Image>
+                            </Grid>
+                        </Border>
                         <Label
                             Text="*Comentários" 
-                            Style="{StaticResource LblEntry}" 
+                            Style="{StaticResource LblHEntry}" 
                             IsVisible="{Binding EdtCommentIsVisible}"
                             />
                         <Editor 
@@ -237,7 +191,7 @@
                             Margin="0,10,0,0"
                             IsVisible="{Binding BtnInsertIsVisible}"
                             IsEnabled="{Binding BtnInsertIsEnabled}"
-                            Style="{StaticResource MainBtn}"
+                            Style="{StaticResource BtnSuccess}"
                             ContentLayout="Left, 10" 
                             >
                             <Button.ImageSource>
