--- a/Bookshelf/Views/UpdatePassword.xaml
+++ b/Bookshelf/Views/UpdatePassword.xaml
@@ -14,7 +14,7 @@
                 <VerticalStackLayout>
                     <components:BorderedEntry Text="{Binding Email}" LabelText="Email"/>
                     <Button Text="Enviar Email"
-                            Style="{StaticResource ButtonPrimary}" 
+                            Style="{StaticResource BtnSuccess}" 
                             Command="{Binding UpdatePasswordCommand}" 
                             Margin="0,10,0,10"                             
                             FontSize="20" ContentLayout="Left, 20" >
