--- a/Bookshelf/Views/AddBook.xaml
+++ b/Bookshelf/Views/AddBook.xaml
@@ -11,7 +11,7 @@
              >
     <ContentPage.Content>
         <ScrollView>
-            <StackLayout VerticalOptions="Center" Style="{StaticResource MainStackLayout}" >
+            <!--<StackLayout VerticalOptions="Center" Style="{StaticResource MainStackLayout}" >-->
                 <Frame Style="{ StaticResource FramePrimary }">
                     <StackLayout>
                         <Image 
@@ -116,8 +116,10 @@
                         <Frame VerticalOptions="Start" BorderColor="Transparent" HorizontalOptions="FillAndExpand" Grid.Row="0" Grid.Column="1" Padding="0" BackgroundColor="Transparent">
                             <components:BorderedEntry Text="{Binding Isbn}" LabelText="*Isbn"/>
                         </Frame>
+                            <!---->
                         <BoxView HeightRequest="1" BackgroundColor="{StaticResource White}"  Margin="0,10,0,10"></BoxView>
-                        <Label Text="Situação" VerticalOptions="Fill" HorizontalOptions="Center" TextColor="{StaticResource White}" FontFamily="EBGaramondSemiBold" FontSize="20"/>
+                        <Label Text="Situação" VerticalOptions="Fill" HorizontalOptions="Center" TextColor="{StaticResource White}" 
+                               FontFamily="EBGaramondSemiBold" FontSize="20"/>
                         <Border HorizontalOptions="CenterAndExpand" Margin="0,5,0,5" Stroke="White">
                             <Border.StrokeShape>
                                 <RoundRectangle CornerRadius="5" />
@@ -127,6 +129,7 @@
                                 SelectedIndex="{ Binding PkrStatusSelectedIndex }"                                    
                                 />
                         </Border>
+                            
                         <Border HorizontalOptions="CenterAndExpand" Margin="0,5,0,5" Stroke="Gray" BackgroundColor="White" Padding="10,0,10,0" IsVisible="{Binding RatingBarIsVisible}">
                             <Border.StrokeShape>
                                 <RoundRectangle CornerRadius="5" />
@@ -205,7 +208,7 @@
                         </Button>
                     </StackLayout>
                 </Frame>
-            </StackLayout>
+            <!--</StackLayout>-->
         </ScrollView>
     </ContentPage.Content>
 </ContentPage>
